<resources>
    <string name="app_name">My Application</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="loginLogin">Login</string>
    <string name="loginForgotPassword">Forgot Password?</string>
    <string name="loginNewUser">Create a new account</string>
    <string name="logtest">Login Success</string>
    <string name="noUsername">Please enter your username</string>
    <string name="noPassword">Please enter your password</string>
    <string name="PleaseWait">Please wait…</string>
    <string name="FirstName">First name</string>
    <string name="MiddleName">Middle name</string>
    <string name="LastName">Last name</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="NewPassword">New password</string>
    <string name="Email">Email address</string>
    <string name="DOB">Date of Birth</string>
    <string name="NewAcc">Register new account</string>
    <string name="AlreadyHaveAcc">Already have an account? Sign in</string>
    <string name="ResetPassword">Please enter your email address. If a matching account is found, an email will be sent with a link to reset your account\'s password</string>
    <string name="ResetPasswordbtn">Reset Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="PermissionTitle">Permission Needed</string>
    <string name="PermissionText">Some permissions will be required to provide required services. Please allow the permission for proper application usage</string>
    <string name="GrantPermission">Grant Permission</string>
    <string name="MapSearchBar">Find a place…</string>
    <string name="MapCursor">Map cursor</string>
    <string name="FindARide">Find a ride</string>
    <string name="RegistrationNumber">Registration Number</string>
    <string name="Insurance">Insurance Company</string>
    <string name="LicenseID">License ID</string>
    <string name="settings">Settings</string>
    <string name="tripsInfo">Trips info</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="navigationDrawerOpen">Open navigation bar</string>
    <string name="navigationDrawerClose">Close navigation bar</string>
    <string name="AvailableForTrips">Available for trips</string>
    <string name="NowAvailableForTrips">Now Available For Trips</string>
    <string name="FindACab">Find a cab</string>
    <string name="CancelCab">Cancel search</string>
    <string name="map">Map</string>
    <string name="setAvailable">Set discoverable for rides</string>
    <string name="resetAvailable">Stop taking rides</string>
    <string name="logout">Logout</string>
    <string name="DriverFoundDistance">Driver Found! Distance :</string>
    <string name="CustomerFound">Customer Found! Marker placed at location.</string>
    <string name="LocatingDriver">Driver Found! Locating...</string>
    <string name="ChangeProfilePicture">Change profile picture</string>
    <string name="AssignedCustomerInfo">Here is the information about your assigned customer :</string>
    <string name="AssignedDriverInfo">Here is the information about your assigned driver :</string>
    <string name="dismiss">Dismiss</string>
    <string name="rating">Rating :</string>
    <string name="over5">/5 with </string>
    <string name="ratings">ratings</string>

</resources>
