<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".NewPassengerActivity"
    >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="730dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/RegDriverProfileImage"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_default_user"
                android:layout_marginBottom="12sp"
                android:contentDescription="Profile Picture" />

            <Button
                android:id="@+id/btnRegDriverChangeProfilePic"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ChangeProfilePicture" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/loginUsername"
                android:visibility="visible"
                tools:layout_editor_absoluteY="26dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegUsername"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible"
                    android:windowSoftInputMode="adjustResize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/NewPassword"
                android:visibility="visible"
                app:endIconMode="password_toggle"
                tools:layout_editor_absoluteY="93dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:visibility="visible"
                    android:windowSoftInputMode="adjustResize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/ConfirmPassword"
                android:visibility="visible"
                app:endIconMode="password_toggle"
                tools:layout_editor_absoluteY="163dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegConfirmPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:visibility="visible"
                    android:windowSoftInputMode="adjustResize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/FirstName"
                android:visibility="visible"
                tools:layout_editor_absoluteY="242dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegFirstName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible"
                    android:windowSoftInputMode="adjustResize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/MiddleName"
                android:visibility="visible"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="307dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegMiddleName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible"
                    android:windowSoftInputMode="adjustResize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/LastName"
                android:visibility="visible"
                android:windowSoftInputMode="adjustPan"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="375dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegLastName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:visibility="visible" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/Email"
                android:visibility="visible"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="456dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:visibility="visible"
                    android:windowSoftInputMode="adjustPan" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegDOB"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:hint="@string/DOB"
                    android:inputType="none"
                    android:editable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegLicenseID"
                    android:inputType="number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/LicenseID" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegRegistration"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:hint="@string/RegistrationNumber" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRegInsurance"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:hint="@string/Insurance" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegNewAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/NewAcc"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvAlreadyhaveAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/AlreadyHaveAcc"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvPleaseWait"
                android:layout_width="82dp"
                android:layout_height="19dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/PleaseWait"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/progressBarNewAcc"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:indeterminate="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="400dp"
                android:text="TextView"
                tools:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>