<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsPassengerActivity">

    <Button
        android:id="@+id/btnAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25sp"
        android:text="@string/FindARide" />

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/searchBar"
        style="@style/MaterialSearchBarLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="5dp"
        android:outlineProvider="bounds"
        android:visibility="visible"
        app:mt_hint="@string/MapSearchBar"
        app:mt_maxSuggestionsCount="10"
        app:mt_navIconEnabled="false"
        app:mt_placeholder="@string/MapSearchBar"
        app:mt_speechMode="false" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsPassengerActivity" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/MapCursor"
        android:src="@drawable/ic_pin"
        android:translationY="-24dp" />

    <LinearLayout
        android:id="@+id/driverInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignBottom="@+id/btnAction"
        android:background="@color/white"
        android:visibility="visible">
        <Button
            android:id="@+id/btnDismissDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dismiss"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AssignedDriverInfo"
            android:paddingBottom="10sp"/>
        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/driverInfoImageView"
            android:src="@mipmap/ic_default_user_round"
            android:layout_margin="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity=""
            android:layout_marginBottom="80dp"
            android:paddingLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10sp"
                android:paddingTop="20sp"
                android:id="@+id/driverInfoUsername"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20sp"
                android:id="@+id/driverInfoName"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20sp"
                android:id="@+id/driverInfoRating"/>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>


